--- a/about.html
+++ b/about.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <title>
+      welcome to my project here in L3SOD
+    </title>
+  </head>
+  <body>
+    <p1>In L3SOD we found diffents students. Some of them are serious another are not serious <br>
+      <p2> But those student some want to student another don't want 
+        </body>
+      </html>
